# microbit_co2

./: .pre-commit-config.yaml  Cargo.toml  REDME.md
.cargo/: config.toml
src/: ble.rs  display.rs  main.rs  sense.rs
src/ble/: services.rs
src/ble/services/: battery.rs  configuration.rs  environment.rs  motion.rs  sound.rs  ui.rs
