[package]
name = "microbit_co2"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "defmt",
    "executor-thread"
] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
libscd = { version = "0.5.1", features = ["scd4x", "async", "defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.0"
microbit-bsp = { version = "0.4.0"}
embassy-sync = { version = "0.7.0", features = ["defmt"] }
heapless = { version = "0.8.0", features = ["defmt-03"] }

[patch.crates-io]
microbit-bsp = { git = "https://github.com/lulf/microbit-bsp.git", rev="9c7d52e21de9ff03f8957faa2eb4d76e4497b05c"}
