[package]
name = "microbit_co2"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "defmt",
    "executor-thread"
] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
libscd = { version = "0.5.0", features = ["scd4x", "async", "defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
microbit-bsp = { version = "0.4.0", features = ["trouble"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
heapless = { version = "0.8.0", features = ["defmt-03"] }
static_cell = "2.1.0"
trouble-host = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }

[patch.crates-io]
microbit-bsp = { git = "https://github.com/lulf/microbit-bsp.git", rev = "19d555bfbbcfa39db6aac467673386662c39e299" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev="7be9b853e15ca0404d65c623d1ec5795fd96c204" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev="7be9b853e15ca0404d65c623d1ec5795fd96c204" }

embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }

# 将包含调试数据和一些推荐的编译器和链接器优化，以使固件尽可能的小
[profile.release]
debug = 2
codegen-units = 1
lto = "fat"
opt-level = "z"
